--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,18 @@
         </dependency>
 
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>22.0.2</source>   <!-- Make sure this is compatible -->
+                    <target>22.0.2</target>   <!-- Ensure this matches the installed JDK version -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
